
syntax = "proto3";

package apiproto;



message ClientInfo {
    string User = 1;
    string Client = 2;
    bytes ConnInfo = 3;
    bytes ChanInfo = 4;
}

message Publication {
    string UID = 1;
    bytes Data = 2;
    ClientInfo Info = 3;
}

message Error {
    uint32 Code = 1;
    string Message = 2;
}

enum MethodType {
    

    PUBLISH = 0;
    BROADCAST = 1;
    UNSUBSCRIBE = 2;
    DISCONNECT = 3;
    PRESENCE = 4;
    PRESENCE_STATS = 5;
    HISTORY = 6;
    HISTORY_REMOVE = 7;
    CHANNELS = 8;
    INFO = 9;
}

message Command {
    uint32 ID = 1;
    MethodType Method = 2;
    bytes Params = 3;
}

message Reply {
    uint32 ID = 1;
    Error Error = 2;
    bytes Result = 3;
}

message PublishRequest {
    string Channel = 1;
    bytes Data = 2;
    string UID = 3;
}

message PublishResponse {
    Error Error = 1;
    PublishResult Result = 2;
}

message PublishResult {}

message BroadcastRequest {
    repeated string Channels = 1;
    bytes Data = 2;
    string UID = 3;
}

message BroadcastResponse {
    Error Error = 1;
    BroadcastResult Result = 2;
}

message BroadcastResult {}

message UnsubscribeRequest {
    string Channel = 1;
    string User = 2;
}

message UnsubscribeResponse {
    Error Error = 1;
    UnsubscribeResult Result = 2;
}

message UnsubscribeResult {}

message DisconnectRequest {
    string User = 1;
}

message DisconnectResponse {
    Error Error = 1;
    DisconnectResult Result = 2;
}

message DisconnectResult {}

message PresenceRequest {
    string Channel = 1;
}

message PresenceResponse {
    Error Error = 1;
    PresenceResult Result = 2;
}

message PresenceResult {
    map<string, ClientInfo> Presence = 1;
}

message PresenceStatsRequest {
    string Channel = 1;
}

message PresenceStatsResponse {
    Error Error = 1;
    PresenceStatsResult Result = 2;
}

message PresenceStatsResult {
    uint32 NumClients = 1;
    uint32 NumUsers = 2;
}

message HistoryRequest {
    string Channel = 1;
}

message HistoryResponse {
    Error Error = 1;
    HistoryResult Result = 2;
}

message HistoryResult {
    repeated Publication Publications = 1;
}

message ChannelsRequest {}

message ChannelsResponse {
    Error Error = 1;
    ChannelsResult Result = 2;
}

message ChannelsResult {
    repeated string Channels = 1;
}

message InfoRequest {}

message InfoResponse {
    Error Error = 1;
    InfoResult Result = 2;
}

message InfoResult {
    string Engine = 1;
    repeated NodeResult Nodes = 2;
}

message NodeResult {
    string UID = 1;
    string Name = 2;
    string Version = 3;
    uint32 NumClients = 4;
    uint32 NumUsers = 5;
    uint32 NumChannels = 6;
    uint32 Uptime = 7;
}

service Centrifugo {
    rpc Publish (PublishRequest) returns (PublishResponse) {}
    rpc Broadcast (BroadcastRequest) returns (BroadcastResponse) {}
    rpc Unsubscribe (UnsubscribeRequest) returns (UnsubscribeResponse) {}
    rpc Disconnect (DisconnectRequest) returns (DisconnectResponse) {}
    rpc Presence (PresenceRequest) returns (PresenceResponse) {}
    rpc PresenceStats (PresenceStatsRequest) returns (PresenceStatsResponse) {}
    rpc History (HistoryRequest) returns (HistoryResponse) {}
    rpc Channels (ChannelsRequest) returns (ChannelsResponse) {}
    rpc Info (InfoRequest) returns (InfoResponse) {}
}
